chnaged recent/lists to have auto overflow to keep nav fixed
git-svn-id: file:///home/ddahl/code/rcache/rcache-orig@182 f87fd56f-0123-0410-af00-cac8b4cc7d3a

--- a/media/css/dynamic-width.css
+++ b/media/css/dynamic-width.css
@@ -1004,8 +1004,10 @@ textarea{
 #search_results_grid{
     padding: 0px;
     width:100%;
-    min-height: 400px;    
     border: none;
+    max-height:50em;
+    min-height:40em;
+    overflow:auto;
 }
 .bold_header{
     font-weight:bolder;
